@@ -62,6 +62,8 @@ Fixes:
  * Fix a crashbug reported by Minion. [MG]
  * Sorting functions now ignore ANSI when sorting a string as a number
    or dbref. From report by Mouvar. [MG]
+ * strreplace() was broken for overly long length arguments. Reported
+   by Ashen-Shugar.  [SW]
 
 Version 1.8.4 patchlevel 8                                 Nov 11, 2011
 
